syntax = "proto3";

package com.nikitahohulia.nats.reqreply.user.create.proto;

option java_multiple_files = true;

import "com/nikitahohulia/nats/commonmodels/user/user.proto";

message CreateUserRequest {
    commonmodels.user.User user = 1;
}

message CreateUserResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        commonmodels.user.User user = 1;
    }

    message Failure {
        string message = 1;
    }
}
